package death_knight

import (
	"time"

	"github.com/wowsims/mop/sim/core"
	"github.com/wowsims/mop/sim/core/proto"
)

var DeathStrikeActionID = core.ActionID{SpellID: 49998}

/*
Focuses dark power into a strike that deals 185% weapon damage plus 499 to an enemy and heals you for 20% of the damage you have sustained from non-player sources during the preceding 5 sec (minimum of at least 7% of your maximum health).
This attack cannot be parried.
*/
func (dk *DeathKnight) registerDeathStrike() {
	damageTakenInFive := 0.0

	hasBloodRites := dk.Inputs.Spec == proto.Spec_SpecBloodDeathKnight

	core.MakePermanent(dk.GetOrRegisterAura(core.Aura{
		Label: "Death Strike Damage Taken",
		OnSpellHitTaken: func(aura *core.Aura, sim *core.Simulation, spell *core.Spell, result *core.SpellResult) {
			if result.Landed() {
				damageTaken := result.Damage
				damageTakenInFive += damageTaken

				pa := sim.GetConsumedPendingActionFromPool()
				pa.NextActionAt = sim.CurrentTime.Truncate(time.Second) + time.Second*5
				pa.OnAction = func(_ *core.Simulation) {
					damageTakenInFive -= damageTaken
				}

				sim.AddPendingAction(pa)
			}
		},
		OnGain: func(aura *core.Aura, sim *core.Simulation) {
			damageTakenInFive = 0.0
		},
	}))

	healingSpell := dk.RegisterSpell(core.SpellConfig{
		ActionID:       core.ActionID{SpellID: 45470},
		SpellSchool:    core.SpellSchoolPhysical,
		ProcMask:       core.ProcMaskEmpty,
		ClassSpellMask: DeathKnightSpellDeathStrikeHeal,
		Flags:          core.SpellFlagPassiveSpell | core.SpellFlagHelpful,

		DamageMultiplier: 1,
		ThreatMultiplier: 0,

		ApplyEffects: func(sim *core.Simulation, target *core.Unit, spell *core.Spell) {
			maxHealth := spell.Unit.MaxHealth()
			healing := min(max(maxHealth*0.07, damageTakenInFive*dk.deathStrikeHealingMultiplier), maxHealth*0.35)
			healing *= 1 + (float64(dk.ScentOfBloodAura.GetStacks()) * 0.2)
			spell.CalcAndDealHealing(sim, target, healing, spell.OutcomeHealing)
		},
	})

	var ohSpell *core.Spell
	if dk.Spec == proto.Spec_SpecFrostDeathKnight {
		ohSpell = dk.registerOffHandDeathStrike()
	}

	dk.RegisterSpell(core.SpellConfig{
		ActionID:       DeathStrikeActionID.WithTag(1),
		SpellSchool:    core.SpellSchoolPhysical,
		ProcMask:       core.ProcMaskMeleeMHSpecial,
		Flags:          core.SpellFlagMeleeMetrics | core.SpellFlagAPL | core.SpellFlagEncounterOnly,
		ClassSpellMask: DeathKnightSpellDeathStrike,

		MaxRange: core.MaxMeleeRange,

		RuneCost: core.RuneCostOptions{
			FrostRuneCost:  1,
			UnholyRuneCost: 1,
			RunicPowerGain: 20,
			// Not actually refundable, but setting this to `true` if specced into blood
			// makes the default SpendCost function skip handling the rune cost and
			// lets us manually spend it with death rune conversion in ApplyEffects.
			Refundable: hasBloodRites,
		},
		Cast: core.CastConfig{
			DefaultCast: core.Cast{
				GCD: core.GCDMin,
			},
		},

		DamageMultiplier: 1.85,
		CritMultiplier:   dk.DefaultCritMultiplier(),
		ThreatMultiplier: 1,

		ApplyEffects: func(sim *core.Simulation, target *core.Unit, spell *core.Spell) {
			baseDamage := dk.CalcScalingSpellDmg(0.40000000596) +
				spell.Unit.MHNormalizedWeaponDamage(sim, spell.MeleeAttackPower())

			result := spell.CalcDamage(sim, target, baseDamage, spell.OutcomeMeleeWeaponSpecialNoParry)

			if hasBloodRites {
				spell.SpendCostAndConvertFrostOrUnholyRune(sim, result.Landed())
			}

			if result.Landed() && dk.ThreatOfThassarianAura.IsActive() {
				ohSpell.Cast(sim, target)
			}

			spell.DealDamage(sim, result)

			healingSpell.Cast(sim, &dk.Unit)
		},
	})
}

func (dk *DeathKnight) registerOffHandDeathStrike() *core.Spell {
	return dk.RegisterSpell(core.SpellConfig{
		ActionID:       DeathStrikeActionID.WithTag(2), // Actually 66188
		SpellSchool:    core.SpellSchoolPhysical,
		ProcMask:       core.ProcMaskMeleeOHSpecial,
		Flags:          core.SpellFlagMeleeMetrics | core.SpellFlagPassiveSpell,
		ClassSpellMask: DeathKnightSpellDeathStrike,

		DamageMultiplier: 1.85,
		CritMultiplier:   dk.DefaultCritMultiplier(),
		ThreatMultiplier: 1,

		ApplyEffects: func(sim *core.Simulation, target *core.Unit, spell *core.Spell) {
			baseDamage := dk.CalcScalingSpellDmg(0.20000000298) +
				spell.Unit.OHNormalizedWeaponDamage(sim, spell.MeleeAttackPower())

			spell.CalcAndDealDamage(sim, target, baseDamage, spell.OutcomeMeleeSpecialCritOnly)
		},
	})
}

func (dk *DeathKnight) registerDrwDeathStrike() *core.Spell {
	return dk.RuneWeapon.RegisterSpell(core.SpellConfig{
		ActionID:    DeathStrikeActionID.WithTag(1),
		SpellSchool: core.SpellSchoolPhysical,
		ProcMask:    core.ProcMaskMeleeMHSpecial,
		Flags:       core.SpellFlagMeleeMetrics,

		ApplyEffects: func(sim *core.Simulation, target *core.Unit, spell *core.Spell) {
			baseDamage := dk.CalcScalingSpellDmg(0.40000000596) +
				dk.RuneWeapon.StrikeWeapon.CalculateWeaponDamage(sim, spell.MeleeAttackPower()) +
				dk.RuneWeapon.StrikeWeaponDamage

			spell.CalcAndDealDamage(sim, target, baseDamage, spell.OutcomeMeleeWeaponSpecialNoParry)
		},
	})
}
